# linera-quiz-ui

./: .gitignore  Cargo.toml  README.md
front-end/: tsconfig.tsbuildinfo  vite.config.js
front-end/src/graphql/: quizQueries.ts
front-end/src/providers/: WalletProvider.vue
front-end/src/stores/: authStore.ts  index.ts
front-end/src/views/: LoginView.vue  QuizRankView.vue  QuizTakingView.vue
pixel-chain/: Cargo.toml  README.md
pixel-chain/src/: contract.rs  lib.rs  service.rs  state.rs
pixel-chain/tests/: integration_tests.rs
react-frontend/: .env  index.html  package-lock.json  package.json
react-frontend/src/: App.css  App.tsx  constants.ts  index.css
react-frontend/src/apollo/: index.ts  index.tsx
react-frontend/src/components/: CreateQuizForm.tsx  GlobalRankings.tsx  LoginButton.tsx  MyQuizzes.tsx  NicknameSetting.tsx  Notification.tsx  NotificationContainer.tsx  NotificationContext.tsx  QuizList.tsx  QuizRankings.css  QuizRankings.tsx  QuizTakingPage.tsx  UserInfo.tsx  WalletConnectionScreen.tsx
react-frontend/src/contexts/: UserContext.tsx
react-frontend/src/graphql/: quizMutations.ts  quizQueries.ts  quizTypes.ts  scheme.json
react-frontend/src/hooks/: useNotification.ts
react-frontend/src/providers/: DynamicWalletProvider.tsx  LineraAdapter.ts
react-frontend/src/types/: NotificationTypes.ts
src/: contract.rs  lib.rs  service.rs  state.rs
vite-linera-counter/: package.json
vite-linera-counter/src/lib/: linera-adapter.ts
